--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 certifi==2025.1.31
 charset-normalizer==3.4.1
+dotenv==0.9.9
 dropbox==12.0.2
 idna==3.10
 ply==3.11
+python-dotenv==1.1.0
 requests==2.32.3
 six==1.17.0
 stone==3.3.1
